refactor: host favicons in google drive

--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+  <!-- apple-touch-icon.png -->
+  <link rel="apple-touch-icon" sizes="180x180" href="https://drive.google.com/uc?id=1OgDoM7oScMMjYV3GJ3SXWQ8UldAEeiu7">
+
+  <!-- favicon-32x32.png -->
+  <link rel="icon" type="image/png" sizes="32x32" href="https://drive.google.com/uc?id=17-9iZfo298xOCcbQRlazZ4QfuB-SU7DY">
+
+  <!-- favicon-16x16.png -->
+  <link rel="icon" type="image/png" sizes="16x16" href="https://drive.google.com/uc?id=1k5-piBxd5dR5Hn6a-nRCI1msMvFDs2Cz">
+
+  <!-- site.webmanifest -->
   <link rel="manifest" href="/site.webmanifest">
+
+  <!-- safari-pinned-tab.svg -->
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <link rel="shortcut icon" href="/favicon.ico">
+
+  <!-- favicon.ico -->
+  <link rel="shortcut icon" href="https://drive.google.com/uc?id=168pQZLpKpU2nAafEx5kTz9wKo_DRexgC"> 
+
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
