fix: correct broken GDrive image fetch links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- apple-touch-icon.png -->
-  <link rel="apple-touch-icon" sizes="180x180" href="https://drive.google.com/uc?id=1OgDoM7oScMMjYV3GJ3SXWQ8UldAEeiu7">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon_io/apple-touch-icon.png">
 
   <!-- favicon-32x32.png -->
-  <link rel="icon" type="image/png" sizes="32x32" href="https://drive.google.com/uc?id=17-9iZfo298xOCcbQRlazZ4QfuB-SU7DY">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon_io/favicon-32x32.png">
 
   <!-- favicon-16x16.png -->
-  <link rel="icon" type="image/png" sizes="16x16" href="https://drive.google.com/uc?id=1k5-piBxd5dR5Hn6a-nRCI1msMvFDs2Cz">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon_io/favicon-16x16.png">
 
   <!-- site.webmanifest -->
   <link rel="manifest" href="/site.webmanifest">
@@ -20,7 +20,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
   <!-- favicon.ico -->
-  <link rel="shortcut icon" href="https://drive.google.com/uc?id=168pQZLpKpU2nAafEx5kTz9wKo_DRexgC"> 
+  <link rel="shortcut icon" href="/assets/favicon_io/favicon.ico"> 
 
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-config" content="/browserconfig.xml">
